<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivityFragments.loginGetBirthdayFragment.LoginGetBirthdayFragment">

    <TextView
        android:id="@+id/loginGetBirthdayErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getBirthdayEditText" />

    <ProgressBar
        android:id="@+id/loginGetBirthdayProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginGetBirthdayTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_birthday_title"
        android:textSize="@dimen/login_edit_text_values_generic_size"
        app:layout_constraintBottom_toTopOf="@+id/getBirthdayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getBirthdayContinueButton"
        android:text="@string/Continue"
        style="@style/initial_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getBirthdayEditText" />

    <EditText
            android:id="@+id/getBirthdayEditText"
            style="@style/date_picker_edit_text_general"
            app:layout_constraintBottom_toTopOf="@+id/getBirthdayContinueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginGetBirthdayTitleTextView"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>