...
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_host"
    app:startDestination="@id/splashScreenFragment">
    <fragment
        android:id="@+id/loginSelectMethodFragment"
        android:name="site.letsgoapp.letsgo.loginActivityFragments.loginSelectMethodFragment.LoginSelectMethodFragment"
        tools:layout="@layout/fragment_login_select_method">
        <action
            android:id="@+id/action_loginSelectMethodFragment_to_loginGetPhoneNumberFragment"
            app:destination="@id/loginGetPhoneNumberFragment" />
        <action
...
    <fragment
        android:id="@+id/loginGetBirthdayFragment"
        android:name="site.letsgoapp.letsgo.loginActivityFragments.loginGetBirthdayFragment.LoginGetBirthdayFragment"
        tools:layout="@layout/fragment_login_get_birthday">
        <action
            android:id="@+id/action_loginGetBirthdayFragment_to_loginGetNameFragment"
            app:destination="@id/loginGetNameFragment" />
        <action
            android:id="@+id/action_loginGetBirthdayFragment_to_loginGetNameFragment_pop_back_stack"
            app:destination="@id/loginGetNameFragment"
            app:popUpTo="@id/loginGetBirthdayFragment"
            app:popUpToInclusive="true" />
    </fragment>
...
