...
    <string name="get_email_error">Error validating email.</string>
    <string name="get_email_address_text">Email</string>
    <string name="get_email_title">Enter Email Address</string>

    <!-- Login Get Birthday -->
    <string name="get_birthday_connection_error">@string/general_connection_error</string>
    <string name="get_birthday_invalid_birthday">Invalid birthday please try again.</string>
    <string name="get_birthday_title">Enter Birthday</string>
    <string name="get_birthday_date">MM/DD/YYYY</string>

    <!-- Login Get First Name -->
    <string name="get_first_name_connection_error">@string/general_connection_error</string>
    <string name="get_first_name_invalid_name">Invalid name please try again.</string>
...
    <!-- Connection Error dialog -->
    <string name="connection_error_dialog_title">@string/general_connection_error</string>
    <string name="connection_error_dialog_body">No internet connection detected.</string>

    <!-- Underage dialog -->
    <string name="underage_dialog_title">Underage</string>
    <string name="underage_dialog_body">Account creation failed, you must be at least %1$d years of age to use this app.</string>

    <!-- Suspended And Banned dialog -->
    <string name="suspended_dialog_title">Account Suspended</string>
    <string name="banned_dialog_title">Account Banned</string>
    <string name="suspended_banned_reason_unspecified">Unspecified</string>
    <string name="generic_suspended_reason">Account has been suspended.</string>
...
